--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:18-alpine  # Change Node version if needed
+FROM node:18-alpine  
 
 WORKDIR /usr/src/app
 
@@ -9,7 +9,7 @@ COPY . .
 
 # Add environment variable for production build
 ENV NODE_ENV=production
-ENV REACT_APP_API_URL=/api  # Change if your API path is different
+ENV REACT_APP_API_URL=/api  
 
 # Build the application
 RUN npm run build
@@ -17,7 +17,7 @@ RUN npm run build
 # Install serve to run the application
 RUN npm install -g serve
 
-EXPOSE 3000  # Change if you want to use a different port
+EXPOSE 3000
 
 # Use serve to run the built React app
-CMD ["serve", "-s", "build", "-l", "3000"]  # Match port with EXPOSE
+CMD ["serve", "-s", "build", "-l", "3000"] 
