--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   mongodb:
     image: mongo
     ports:
-      - "27017:27017"  # Change if you use a different MongoDB port
+      - "27017:27017"  
     volumes:
       - mongo-data:/data/db
   
@@ -11,7 +11,7 @@ services:
     build: ./server
     restart: always
     ports:
-      - "5000:5000"  # Change to match your backend port
+      - "5000:5000" 
     environment:
       - MONGO_URI=mongodb+srv://diluthrangana:6EepE8bRWt1XA2xR@pipeline-test.ibwmkwt.mongodb.net/?retryWrites=true&w=majority&appName=pipeline-test  # Change database name
       - NODE_ENV=production
@@ -24,7 +24,7 @@ services:
     ports:
       - "3000:3000"  # Change to your preferred frontend port
     environment:
-      - REACT_APP_API_URL=http://localhost:5000/api  # Change to match backend URL
+      - REACT_APP_API_URL=http://localhost:5000/api  
     depends_on:
       - backend
 
