--- a/kubernetes/service.yaml
+++ b/kubernetes/service.yaml
@@ -2,23 +2,26 @@ apiVersion: v1
 kind: Service
 metadata:
   name: backend
-  namespace: mern-app  # Match your namespace
+  namespace: mern-app
 spec:
   selector:
     app: backend
   ports:
-  - port: 5000  # Match your backend port
+  - port: 5000
     targetPort: 5000
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: frontend
-  namespace: mern-app  # Match your namespace
+  namespace: mern-app
+  annotations:
+    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
+    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
 spec:
   selector:
     app: frontend
   ports:
-  - port: 80  # External port
-    targetPort: 3000  # Match your frontend container port
-  type: LoadBalancer  # Change to NodePort if you don't want an AWS Load Balancer
+  - port: 80
+    targetPort: 3000
+  type: LoadBalancer
