--- a/kubernetes/service.yaml
+++ b/kubernetes/service.yaml
@@ -18,10 +18,14 @@ metadata:
   annotations:
     service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
     service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
+    # Added annotation for better health checks
+    service.beta.kubernetes.io/aws-load-balancer-healthcheck-port: "3000"
+    service.beta.kubernetes.io/aws-load-balancer-healthcheck-path: "/"
 spec:
   selector:
     app: frontend
   ports:
   - port: 80
     targetPort: 3000
+    name: http
   type: LoadBalancer
