--- a/kubernetes/service.yaml
+++ b/kubernetes/service.yaml
@@ -21,8 +21,7 @@ spec:
   ports:
   - port: 80
     targetPort: 3000
-    nodePort: 30080 
-  type: NodePort
+  type: LoadBalancer
 ---
 apiVersion: v1
 kind: Service
